welcome.lessons.welcome.array.has271.Has271.scala.error
has271:10: error: type mismatch;
 found   : Unit
 required: Boolean
    for (k<- 0 to (nums.length-2)){
          ^